--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ThreeJS Starter</title>
-</head>
-<body>
+  </head>
+  <body>
+    <div class="container">
+      <div class="content">
+        <h1>Simone Hoffmann</h1>
+        <p>Software Developer</p>
+      </div>
+    </div>
     <canvas class="webgl"></canvas>
-</body>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/CSSRulePlugin.min.js"
+      integrity="sha512-0bzaetZStCnsUgbCtGVxftzF/L32PNOnrMlYLXwBOKl8cUjTSSDfJVyyJsNwGoI0iE0WUqni2eEfO35kJjFj5g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script>
+      const border = CSSRulePlugin.getRule(".content:before");
+      const h1 = document.querySelector("h1");
+      const p = document.querySelector("p");
+      const timeline = gsap.timeline();
+
+      timeline.from(border, {
+        delay: 0.5,
+        duration: 4,
+        cssRule: { scaleX: 0 },
+      });
+    </script>
+  </body>
 </html>
