Added fancy appearance animation for name

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,11 @@
         duration: 4,
         cssRule: { scaleX: 0 },
       });
+
+      timeline.to(h1, {
+        duration: 2,
+        clipPath: "polygon(0 0, 100% 0, 100% 100%, 0 100%)",
+      });
     </script>
   </body>
 </html>
