Add fancy appearance and correct timing to border and to h1 and p

--- a/src/index.html
+++ b/src/index.html
@@ -35,10 +35,22 @@
         cssRule: { scaleX: 0 },
       });
 
-      timeline.to(h1, {
-        duration: 2,
-        clipPath: "polygon(0 0, 100% 0, 100% 100%, 0 100%)",
-      });
+      timeline.to(
+        h1,
+        {
+          duration: 2,
+          clipPath: "polygon(0 0, 100% 0, 100% 100%, 0 100%)",
+        },
+        "-=3"
+      );
+      timeline.to(
+        p,
+        {
+          duration: 4,
+          clipPath: "polygon(0 0, 100% 0, 100% 100%, 0 100%)",
+        },
+        "-=2"
+      );
     </script>
   </body>
 </html>
