--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="//use.fontawesome.com/releases/v5.0.7/css/all.css"
+    />
     <title>ThreeJS Starter</title>
   </head>
   <body>
+    <div class="subcontainer"></div>
     <div class="container">
+      <a href="https://github.com/chocowhiskey" target="_blank" class="item"
+        ><i class="fab fa-github"></i
+      ></a>
       <div class="content">
         <h1>Simone Hoffmann</h1>
         <p>Software Developer</p>
       </div>
     </div>
+
     <canvas class="webgl"></canvas>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"
