--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,32 @@
     <title>ThreeJS Starter</title>
   </head>
   <body>
-    <div class="subcontainer"></div>
+    <div class="subcontainer">
+      <div class="links">
+        <a href="https://github.com/chocowhiskey" target="_blank" class="item"
+          ><i class="fab fa-github"></i
+        ></a>
+        <a
+          href="https://www.hackerrank.com/simohoff"
+          target="_blank"
+          class="item"
+          ><i class="fas fa-code"></i
+        ></a>
+        <a
+          href="https://www.linkedin.com/in/simohoff/"
+          target="_blank"
+          class="item"
+          ><i class="fab fa-linkedin-in"></i
+        ></a>
+        <a
+          href="https://www.xing.com/profile/Simone_Hoffmann61/cv"
+          target="_blank"
+          class="item"
+          ><i class="fab fa-xing"></i
+        ></a>
+      </div>
+    </div>
     <div class="container">
-      <a href="https://github.com/chocowhiskey" target="_blank" class="item"
-        ><i class="fab fa-github"></i
-      ></a>
       <div class="content">
         <h1>Simone Hoffmann</h1>
         <p>Software Developer</p>
