--- a/src/index.html
+++ b/src/index.html
@@ -12,24 +12,24 @@
   <body>
     <div class="subcontainer">
       <div class="links">
-        <a href="https://github.com/chocowhiskey" target="_blank" class="item"
+        <a href="https://github.com/chocowhiskey" target="blank" class="item"
           ><i class="fab fa-github"></i
         ></a>
         <a
           href="https://www.hackerrank.com/simohoff"
-          target="_blank"
+          target="blank"
           class="item"
           ><i class="fas fa-code"></i
         ></a>
         <a
           href="https://www.linkedin.com/in/simohoff/"
-          target="_blank"
+          target="blank"
           class="item"
           ><i class="fab fa-linkedin-in"></i
         ></a>
         <a
           href="https://www.xing.com/profile/Simone_Hoffmann61/cv"
-          target="_blank"
+          target="blank"
           class="item"
           ><i class="fab fa-xing"></i
         ></a>
