--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="//use.fontawesome.com/releases/v5.0.7/css/all.css"
     />
-    <title>ThreeJS Starter</title>
+    <title>Simone Hoffmann</title>
   </head>
   <body>
     <div class="subcontainer">
